--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BenniBot",
+  "name": "bennibot",
   "version": "1.0.0",
   "description": "",
   "engines": {
@@ -13,17 +13,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/opus": "^0.3.2",
+    "@discordjs/opus": "^0.3.3",
     "canvas": "^2.6.1",
-    "discord.js": "^12.4.0",
-    "eslint": "^7.11.0",
+    "discord.js": "^12.4.1",
+    "eslint": "^7.12.1",
     "ffmpeg-static": "^4.2.7",
     "html-entities": "^1.3.1",
     "m3u8stream": "^0.7.1",
-    "miniget": "^2.0.1",
+    "miniget": "^2.0.2",
+    "node-opus": "^0.3.3",
+    "opusscript": "0.0.7",
     "sax": "^1.2.4",
     "simple-youtube-api": "^5.2.1",
     "sodium": "^3.0.2",
-    "ytdl-core-discord": "^1.2.3"
+    "ytdl-core-discord": "^1.2.4"
   }
 }
