--- a/config.json
+++ b/config.json
@@ -5,5 +5,6 @@
         "version": "b3.0.2.0"
     },
     "inviteURL": "https://discord.com/api/oauth2/authorize?client_id=692296016182902814&permissions=8&scope=bot",
-    "color": "BLUE"
+    "color": "BLUE",
+    "owner_id": "497740534828498950"
 }
