--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
   "dependencies": {
     "@discordjs/opus": "^0.3.3",
     "canvas": "^2.7.0",
-    "discord.js": "^12.5.1",
+    "discord.js": "^12.5.3",
     "dotenv": "^8.2.0",
     "eslint": "^7.22.0",
     "ffmpeg-static": "^4.2.8",
     "html-entities": "^1.4.0",
     "m3u8stream": "^0.7.1",
     "miniget": "^2.1.0",
+    "node-fetch": "^2.6.1",
     "node-opus": "^0.3.3",
     "opusscript": "0.0.7",
     "sax": "^1.2.4",
