--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "html-entities": "^1.4.0",
     "m3u8stream": "^0.7.1",
     "miniget": "^2.1.0",
+    "node-cron": "^3.0.0",
     "node-fetch": "^2.6.1",
     "node-opus": "^0.3.3",
     "opusscript": "0.0.7",
