--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "prefix": ".",
     "bot_info": {
         "name": "BenniBot",
-        "version": "3.0.4.0"
+        "version": "b4.0.0.0"
     },
     "inviteURL": "https://discord.com/api/oauth2/authorize?client_id=692296016182902814&permissions=8&scope=bot",
     "color": "BLUE",
