--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/opus": "^0.3.3",
+    "@discordjs/opus": "^0.5.3",
     "canvas": "^2.7.0",
-    "discord.js": "^12.5.3",
+    "discord.js": "^13.0.0-dev.4d53d0f.1626609771",
     "dotenv": "^8.2.0",
     "eslint": "^7.22.0",
     "ffmpeg-static": "^4.2.8",
