--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
   "homepage": "https://github.com/Benni0109/BenniBot#readme",
   "dependencies": {
     "@discordjs/opus": "^0.5.3",
-    "@discordjs/voice": "^0.5.4",
-    "discord.js": "^13.0.0-dev.4d53d0f.1626609771",
+    "@discordjs/voice": "^0.5.5",
+    "discord.js": "^13.0.0",
     "dotenv": "^10.0.0",
     "eslint": "^7.31.0",
     "ffmpeg-static": "^4.4.0",
+    "libsodium-wrappers": "^0.7.9",
     "node-fetch": "^2.6.1",
     "simple-youtube-api": "^5.2.1",
     "ytdl-core-discord": "^1.3.1"
