--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "libsodium-wrappers": "^0.7.9",
     "node-fetch": "^2.6.1",
     "simple-youtube-api": "^5.2.1",
+    "sodium": "^3.0.2",
     "ytdl-core-discord": "^1.3.1"
   }
 }
