--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/Benni0109/BenniBot#readme",
   "dependencies": {
-    "@discordjs/opus": "^0.5.3",
+    "@discordjs/opus": "github:discordjs/opus",
     "@discordjs/voice": "^0.5.5",
     "discord.js": "^13.0.0",
     "dotenv": "^10.0.0",
