--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "dotenv": "^10.0.0",
     "eslint": "^7.31.0",
     "ffmpeg-static": "^4.4.0",
+    "libsodium": "^0.7.9",
     "libsodium-wrappers": "^0.7.9",
     "node-fetch": "^2.6.1",
     "simple-youtube-api": "^5.2.1",
-    "sodium": "^3.0.2",
     "ytdl-core-discord": "^1.3.1"
   }
 }
