--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "^16.6"
+  },
   "bugs": {
     "url": "https://github.com/Benni0109/BenniBot/issues"
   },
