--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@discordjs/opus": "github:discordjs/opus",
     "@discordjs/voice": "^0.5.5",
+    "discord-ytdl-core": "^5.0.4",
     "discord.js": "^13.0.0",
     "dotenv": "^10.0.0",
     "eslint": "^7.31.0",
