--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "libsodium-wrappers": "^0.7.9",
     "node-fetch": "^2.6.1",
     "simple-youtube-api": "^5.2.1",
-    "ytdl-core": "^4.9.1"
+    "ytdl-core": "^4.9.1",
+    "ytdl-core-discord": "^1.3.1"
   }
 }
