--- a/config.json
+++ b/config.json
@@ -2,10 +2,10 @@
     "prefix": ".",
     "bot_info": {
         "name": "BenniBot",
-        "version": "4.1.2.0"
+        "version": "4.1.3.0"
     },
     "inviteURL": "https://discord.com/api/oauth2/authorize?client_id=692296016182902814&permissions=8&scope=bot",
-    "color": "BLUE",
+    "color": "GREEN",
     "owner_id": "497740534828498950",
 	"clientId": "692296016182902814",
     "guildId": "709856854804791507"
