--- a/config.json
+++ b/config.json
@@ -4,10 +4,10 @@
         "name": "BenniBot",
         "version": "4.1.3.1"
     },
-    "inviteURL": "https://discord.com/api/oauth2/authorize?client_id=692296016182902814&permissions=8&scope=bot",
+    "inviteURL": "https://discord.com/api/oauth2/authorize?client_id=692296016182902814&permissions=8&scope=bot%20applications.commands",
     "color": "GREEN",
     "owner_id": "497740534828498950",
 	"clientId": "692296016182902814",
-    "guildId": "709856854804791507"
+    "guildId": "866270060477153291"
 
 }
