--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "node-fetch": "^3.0.0",
     "simple-youtube-api": "^5.2.1",
     "ytdl-core": "^4.9.1",
-    "ytdl-core-discord": "^1.3.1",
-    "ytsr": "^3.5.3"
+    "ytdl-core-discord": "^1.3.1"
   },
   "devDependencies": {
     "typescript": "^4.4.3"
