--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "@discordjs/rest": "^0.1.0-canary.0",
     "@discordjs/voice": "^0.6.0",
     "ansi-regex": "^5.0.1",
+    "cheerio": "^1.0.0-rc.10",
     "discord-api-types": "^0.23.1",
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
     "libsodium": "^0.7.9",
     "libsodium-wrappers": "^0.7.9",
     "node-fetch": "^3.0.0",
-    "simple-youtube-api": "^5.2.1",
+    "puppeteer": "^10.4.0",
     "ytdl-core": "^4.9.1",
     "ytdl-core-discord": "^1.3.1"
   },
