--- a/package.json
+++ b/package.json
@@ -23,22 +23,22 @@
   "homepage": "https://github.com/Benni0109/BenniBot#readme",
   "dependencies": {
     "@discordjs/builders": "^0.6.0",
-    "@discordjs/opus": "^0.5.3",
+    "@discordjs/opus": "^0.7.0",
     "@discordjs/rest": "^0.1.0-canary.0",
-    "@discordjs/voice": "^0.6.0",
-    "ansi-regex": "^5.0.1",
+    "@discordjs/voice": "^0.7.5",
+    "ansi-regex": "^6.0.1",
     "cheerio": "^1.0.0-rc.10",
-    "discord-api-types": "^0.23.1",
+    "discord-api-types": "^0.24.0",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
-    "libsodium": "^0.7.9",
+    "ffmpeg-static": "^4.4.0",
     "libsodium-wrappers": "^0.7.9",
-    "node-fetch": "^3.0.0",
-    "puppeteer": "^10.4.0",
+    "node-fetch": "^3.1.0",
+    "puppeteer": "^11.0.0",
     "ytdl-core": "^4.9.1",
     "ytdl-core-discord": "^1.3.1"
   },
   "devDependencies": {
-    "typescript": "^4.4.3"
+    "typescript": "^4.5.2"
   }
 }
