--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc": "tsc -w --skipLibCheck"
+    "tsc": "tsc -w --skipLibCheck",
+    "unused": "npx depcheck",
+    "update": "ncu"
   },
   "repository": {
     "type": "git",
@@ -23,17 +25,15 @@
   "homepage": "https://github.com/Benni0109/BenniBot#readme",
   "dependencies": {
     "@discordjs/builders": "^0.9.0",
-    "@discordjs/opus": "^0.7.0",
     "@discordjs/rest": "^0.1.0-canary.0",
     "@discordjs/voice": "^0.7.5",
-    "ansi-regex": "^6.0.1",
     "cheerio": "^1.0.0-rc.10",
     "discord-api-types": "^0.25.2",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
     "ffmpeg-static": "^4.4.0",
     "libsodium-wrappers": "^0.7.9",
-    "node-fetch": "^3.1.0",
+    "opusscript": "^0.0.8",
     "puppeteer": "^13.0.0",
     "ytdl-core": "^4.9.2",
     "ytdl-core-discord": "^1.3.1"
