--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "ffmpeg-static": "^4.4.0",
     "libsodium-wrappers": "^0.7.9",
     "opusscript": "^0.0.8",
-    "puppeteer": "^13.0.1",
+    "puppeteer-core": "^13.0.1",
     "ytdl-core": "^4.9.2",
     "ytdl-core-discord": "^1.3.1"
   },
