--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "git+https://github.com/Benni0109/BenniBot.git"
   },
   "keywords": [],
-  "author": "Benjamin Engler",
+  "author": "Benni0109",
   "license": "ISC",
   "engines": {
     "node": "^17.2"
