--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "bennibot",
-  "version": "4.2.2",
+  "version": "4.4.9",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc": "tsc -w --skipLibCheck",
+    "tsc": "tsc -w",
     "unused": "npx depcheck",
     "update": "ncu"
   },
@@ -24,21 +24,20 @@
   },
   "homepage": "https://github.com/Benni0109/BenniBot#readme",
   "dependencies": {
-    "@discordjs/builders": "^0.11.0",
-    "@discordjs/rest": "^0.2.0-canary.0",
+    "@discordjs/builders": "^0.12.0",
+    "@discordjs/rest": "^0.3.0",
     "@discordjs/voice": "^0.7.5",
-    "cheerio": "^1.0.0-rc.10",
+    "chalk": "^4.1.2",
     "discord-api-types": "^0.26.1",
     "discord.js": "^13.6.0",
-    "dotenv": "^11.0.0",
+    "dotenv": "^16.0.0",
     "ffmpeg-static": "^4.4.1",
     "libsodium-wrappers": "^0.7.9",
     "opusscript": "^0.0.8",
-    "puppeteer-core": "^13.0.1",
-    "ytdl-core": "^4.10.0",
-    "ytdl-core-discord": "^1.3.1"
+    "ytdl-core-discord": "^1.3.1",
+    "ytsr": "^3.6.0"
   },
   "devDependencies": {
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.5"
   }
 }
