--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc -w",
-    "unused": "npx depcheck",
-    "update": "ncu"
+    "update": "ncu && ncu -u && npm install && npx depcheck"
   },
   "repository": {
     "type": "git",
@@ -28,16 +26,17 @@
     "@discordjs/rest": "^0.3.0",
     "@discordjs/voice": "^0.8.0",
     "chalk": "^4.1.2",
-    "discord-api-types": "^0.27.1",
+    "discord-api-types": "^0.29.0",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
-    "ffmpeg-static": "^4.4.1",
+    "ffmpeg-static": "^5.0.0",
     "libsodium-wrappers": "^0.7.9",
     "opusscript": "^0.0.8",
+    "ytdl-core": "^4.11.0",
     "ytdl-core-discord": "^1.3.1",
     "ytsr": "^3.6.0"
   },
   "devDependencies": {
-    "typescript": "^4.5.5"
+    "typescript": "^4.6.2"
   }
 }
