--- a/package.json
+++ b/package.json
@@ -23,17 +23,18 @@
     "@discordjs/rest": "^0.4.1",
     "@discordjs/voice": "^0.9.0",
     "chalk": "^4.1.2",
-    "discord-api-types": "^0.31.2",
+    "discord-api-types": "^0.32.1",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "ffmpeg-static": "^5.0.0",
     "libsodium-wrappers": "^0.7.10",
+    "node-fetch": "^3.2.4",
     "opusscript": "^0.0.8",
     "ytdl-core": "^4.11.0",
     "ytdl-core-discord": "^1.3.1",
-    "ytsr": "^3.7.0"
+    "ytsr": "^3.8.0"
   },
   "devDependencies": {
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.4"
   }
 }
