--- a/package.json
+++ b/package.json
@@ -19,16 +19,15 @@
   },
   "homepage": "https://github.com/Benni0109/BenniBot#readme",
   "dependencies": {
-    "@discordjs/builders": "^0.15.0",
-    "@discordjs/rest": "^0.5.0",
-    "@discordjs/voice": "^0.10.0",
-    "chalk": "^4.1.2",
-    "discord-api-types": "^0.34.0",
-    "discord.js": "^13.8.0",
+    "@discordjs/rest": "^1.0.0",
+    "@discordjs/voice": "^0.11.0",
+    "chalk": "4.1.2",
+    "discord-api-types": "^0.36.2",
+    "discord.js": "^14.0.1",
     "dotenv": "^16.0.1",
-    "ffmpeg-static": "^5.0.0",
+    "ffmpeg-static": "^5.0.2",
     "libsodium-wrappers": "^0.7.10",
-    "node-fetch": "^3.2.6",
+    "node-fetch": "^3.2.8",
     "opusscript": "^0.0.8",
     "ytdl-core": "^4.11.0",
     "ytdl-core-discord": "^1.3.1",
