--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "description": "bennibot is a music & multipurpose discord bot written using discordjs",
   "main": "index.js",
   "scripts": {
-    "tsc": "tsc -w",
+    "build": "tsc",
     "update": "ncu && ncu -u && npm install && npx depcheck"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Benni0109/BenniBot.git"
+    "url": "git+https://github.com/benniblot/bennibot.git"
   },
   "keywords": ["typescript", "discord", "discord-js", "discordbot", "musicbotdiscord"],
   "author": "benniblot",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Benni0109/BenniBot/issues"
+    "url": "https://github.com/benniblot/bennibot/issues"
   },
-  "homepage": "https://github.com/Benni0109/BenniBot#readme",
+  "homepage": "https://github.com/benniblot/bennibot#readme",
   "dependencies": {
     "@discordjs/rest": "^1.3.0",
     "@discordjs/voice": "^0.13.0",
