--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "name": "bennibot",
-  "version": "4.4.9",
+  "version": "4.5.0",
   "description": "bennibot is a music & multipurpose discord bot written using discordjs",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "update": "ncu && ncu -u && npm install && npx depcheck"
+    "build": "npx tsc",
+    "update": "npm update && npm upgrade && npx depcheck"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/benniblot/bennibot.git"
   },
-  "keywords": ["typescript", "discord", "discord-js", "discordbot", "musicbotdiscord"],
+  "keywords": [
+    "typescript",
+    "discord",
+    "discord-js",
+    "discordbot",
+    "musicbotdiscord"
+  ],
   "author": "benniblot",
   "license": "MIT",
   "bugs": {
@@ -19,21 +25,22 @@
   },
   "homepage": "https://github.com/benniblot/bennibot#readme",
   "dependencies": {
-    "@discordjs/rest": "^1.3.0",
-    "@discordjs/voice": "^0.13.0",
-    "chalk": "4.1.2",
-    "discord-api-types": "^0.37.17",
-    "discord.js": "^14.6.0",
+    "@discordjs/builders": "^1.4.0",
+    "@discordjs/rest": "^1.5.0",
+    "@discordjs/voice": "^0.14.0",
+    "chalk": "4.x",
+    "discord-api-types": "^0.37.35",
+    "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
     "ffmpeg-static": "^5.1.0",
-    "libsodium-wrappers": "^0.7.10",
-    "node-fetch": "^3.2.10",
+    "libsodium-wrappers": "^0.7.11",
+    "node-fetch": "^3.3.0",
     "opusscript": "^0.0.8",
     "ytdl-core": "^4.11.2",
     "ytdl-core-discord": "^1.3.1",
     "ytsr": "^3.8.0"
   },
   "devDependencies": {
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.5"
   }
 }
