--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
-    "update": "npm update && npm upgrade && npx depcheck"
+    "update": "npm update && npm upgrade && npx depcheck",
+    "buildDocker": "docker build . -t benniblot/bennibot --pull --target arm64"
   },
   "repository": {
     "type": "git",
@@ -28,7 +29,7 @@
     "@discordjs/builders": "^1.4.0",
     "@discordjs/rest": "^1.5.0",
     "@discordjs/voice": "^0.14.0",
-    "chalk": "4.x",
+    "colors": "^1.4.0",
     "discord-api-types": "^0.37.35",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
@@ -36,11 +37,12 @@
     "libsodium-wrappers": "^0.7.11",
     "node-fetch": "^3.3.0",
     "opusscript": "^0.0.8",
+    "yt-search": "^2.10.4",
     "ytdl-core": "^4.11.2",
-    "ytdl-core-discord": "^1.3.1",
-    "ytsr": "^3.8.0"
+    "ytdl-core-discord": "^1.3.1"
   },
   "devDependencies": {
+    "@types/yt-search": "^2.3.2",
     "typescript": "^4.9.5"
   }
 }
