--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npx tsc",
     "update": "npm update && npm upgrade && npx depcheck",
-    "buildDocker": "docker build . -t benniblot/bennibot --pull --platform linux/arm64"
+    "dockerImage": "docker build . -t benniblot/bennibot --pull --platform linux/arm64 && docker image save benniblot/bennibot --output bennibot.tar"
   },
   "repository": {
     "type": "git",
@@ -27,22 +27,24 @@
   "homepage": "https://github.com/benniblot/bennibot#readme",
   "dependencies": {
     "@discordjs/builders": "^1.4.0",
+    "@discordjs/opus": "^0.9.0",
     "@discordjs/rest": "^1.5.0",
     "@discordjs/voice": "^0.14.0",
-    "colors": "1.4.0",
-    "discord-api-types": "^0.37.35",
-    "discord.js": "^14.7.1",
-    "dotenv": "^16.0.3",
+    "axios": "^1.4.0",
+    "colors": "^1.4.0",
+    "discord-api-types": "^0.37.46",
+    "discord.js": "^14.11.0",
+    "dotenv": "^16.3.1",
     "ffmpeg-static": "^5.1.0",
     "libsodium-wrappers": "^0.7.11",
-    "node-fetch": "^3.3.0",
-    "opusscript": "^0.0.8",
+    "node-fetch": "^3.3.1",
+    "tweetnacl": "^1.0.3",
     "yt-search": "^2.10.4",
-    "ytdl-core": "^4.11.2",
+    "ytdl-core": "^4.11.4",
     "ytdl-core-discord": "^1.3.1"
   },
   "devDependencies": {
     "@types/yt-search": "^2.3.2",
-    "typescript": "^4.9.5"
+    "typescript": "^5.1.3"
   }
 }
